# hass-surepetcare

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  dev-requirements.txt  hacs.json  pyproject.toml  requirements-dev.txt  requirements.test.txt  sync_manifest.py  test.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bump-package-version.yml  codeql-analysis.yml  dependabot-sync-hacs.yml  hacs.yaml  hassfest.yaml  move-dev-snapshot-tag.yml  pre-commit.yaml  release-dev-edge.yml  release-dev.yml  release-drafter.yml  release.yml  sync_manifest.yml  test-and-coverage.yml  update_manifest.yml
custom_components/surepcha/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_config_schema.py  diagnostics.py  entity.py  helper.py  lock.py  manifest.json  method_field.py  number.py  select.py  sensor.py  services.py  services.yaml  switch.py
custom_components/surepetcare/: __init__.py  binary_sensor.py  button.py  config_flow copy.py  config_flow.py  const.py  coordinator.py  device_config_schema.py  diagnostics.py  entity.py  entity_path.py  helper.py  lock.py  manifest.json  number.py  schedule.py  select.py  sensor.py  services.py  services.yaml  switch.py
scripts/: release.py  reorder_translations.py  verify_ha_version.py  verify_manifest.py  verify_packages.py
tests/: __init__.py  conftest.py  test.json  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_device_config_schema.py  test_diagnostics.py  test_entity.py  test_entity_path.py  test_init.py  test_lock.py  test_method_field.py  test_number.py  test_schedule.py  test_select.py  test_sensor.py  test_services.py  test_switch.py  test_translations.py
tests/fixtures/: dual_scan_connect.json  feeder_connect.json  hub.json  pet.json  pet_door.json  poseidon_connect.json
tests/snapshots/: test_binary_sensor.ambr  test_button.ambr  test_config_flow.ambr  test_device_config_schema.ambr  test_diagnostics.ambr  test_init.ambr  (+6 more)
(+6 files in other folders)
