[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hass-surepetcare"
version = "0.0.0"
description = "Hass component library for SurePetcare API"
authors = [
    { name = "FredrikM97" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13.2"

[project.optional-dependencies]
dev = [
    "homeassistant==2025.12.0",
    "py-surepetcare==0.5.9",
    "pycares<6.0.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-homeassistant-custom-component==0.13.287"
]

[tool.setuptools.packages.find]
include = ["custom_components.surepcha*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true