[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hass-surepetcare"
version = "0.0.0"
description = "Hass component library for SurePetcare API"
authors = [
    { name = "FredrikM97" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13.2"

[project.optional-dependencies]
dev = [
    "py-surepetcare==0.5.9",
    "pre-commit==4.5.1",
    "pytest-homeassistant-custom-component==0.13.307"
]

[tool.setuptools.packages.find]
include = ["custom_components.surepcha*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true